Bug 170231 - FILTER UI Can't paste into autofilter using right-click paste
Summary: FILTER UI Can't paste into autofilter using right-click paste
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.3.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2026-01-05 11:25 UTC by Nigel Arnot
Modified: 2026-01-21 13:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen snapshot, if my description wasn't clear (35.81 KB, image/png)
2026-01-05 11:26 UTC, Nigel Arnot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nigel Arnot 2026-01-05 11:25:10 UTC
Description:
It used to be possible to copy into the "Select Field" field of a filter using right-click/paste. This no longer works. Control/V still works.

Steps to Reproduce:
1.Open a spreadsheet with Auto-filters on columns
2.Select a filter
3.Try to paste into "Select Field" using right-click paste

(A picture may be worth a thousand words -- screenshot attached)

Actual Results:
Nothing happens

Expected Results:
Text in paste buffer gets copied in, as with control/V


Reproducible: Always


User Profile Reset: No

Additional Info:
Version of Libreoffice supplied by Fedora 43. Used to work on Fedora 40.
Comment 1 Nigel Arnot 2026-01-05 11:26:50 UTC
Created attachment 204926 [details]
Screen snapshot, if my description wasn't clear
Comment 2 raal 2026-01-05 21:23:34 UTC
Confirm with Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: c8694e248756d80c2b12b43dc5499a249af47a71
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works in 7.3.7.
Works with VCL GEN. Probably the problem is GTK3 specific.
Comment 3 raal 2026-01-05 21:35:42 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 4abd0089eda607fc1561f9b59b24c5e27be41371 is the first bad commit
commit 4abd0089eda607fc1561f9b59b24c5e27be41371
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sat May 18 14:12:22 2024 +0200

    source b2dc515e2a3c8420c7f39c0b4396632c2086126a

167798: Related: tdf#146326 restore correct focus when on submenu launched | https://gerrit.libreoffice.org/c/core/+/167798
Comment 4 Caolán McNamara 2026-01-20 09:37:15 UTC
If I type a letter, then right click shows a menu, delete it again and right click doesn't seem to work again, so I think the problem here is the placeholder overlay
Comment 5 Caolán McNamara 2026-01-20 09:44:00 UTC
https://gerrit.libreoffice.org/c/core/+/197643 looks good for this
Comment 6 Commit Notification 2026-01-21 13:15:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d622b90e62c59409929f19c2769718dca82c76d3

Resolves: tdf#170231 Can't paste into gtk autofilter using right-click paste

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-01-21 13:16:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/6766aeb744e1df51bef8c29134b8f9928f5757ea

Resolves: tdf#170231 Can't paste into gtk autofilter using right-click paste

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.