Resolves: tdf#170231 Can't paste into gtk autofilter using right-click paste

Change-Id: Ia8ed02996ba81253dafcb20a3e38f64caf2c32b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197644
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins